--- a/FIA.html
+++ b/FIA.html
@@ -12,14 +12,15 @@
   <div class="page">
 
     <header>
-      <h1>Informatie overal!</h1>
+      <h1>FIA!</h1>
     </header>
 
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="overmij.html">Over mij</a></li>
-        <li><a class="active" href="info.html">Informatie</a></li>
+        <li><a class="active" href="FIA.html">FIA</a></li>
+        <li><a href="teams.html">teams en coureurs</a></li>
+        <li><a  href="geschiedenis.html">De geschiedenis</a></li>
       </ul>
     </nav>
 
