--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
     <nav>
       <ul>
         <li><a class="active" href="index.html">Home</a></li>
-        <li><a href="overmij.html">Over mij</a></li>
-        <li><a href="info.html">Informatie</a></li>
+        <li><a href="FIA.html">FIA</a></li>
+        <li><a href="teams.html">teams en coureurs</a></li>
+        <li><a href=geschiedenis.html>De Geschiedenis</a></li>
       </ul>
     </nav>
 
