--- a/teams.html
+++ b/teams.html
@@ -12,14 +12,16 @@
   <div class="page">
 
     <header>
-      <h1>Wil je meer van mij weten?</h1>
+      <h1>teams en coureurs!</h1>
     </header>
 
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a class="active" href="overmij.html">Over mij</a></li>
-        <li><a href="info.html">Informatie</a></li>
+       <li><a href="index.html">Home</a></li>
+        <li><a href="FIA.html">FIA</a></li>
+        <li><a class="active" href="teams.html">teams en coureurs</a></li>
+        <li><a href="geschiedenis.html">De geschiedenis</a></li>
+      
       </ul>
     </nav>
 
