--- a/autoonderdelen.html
+++ b/autoonderdelen.html
@@ -12,16 +12,16 @@
   <div class="page">
 
     <header>
-      <h1>De geschiedenis!</h1>
+      <h1>De auto onderdelen</h1>
     </header>
 
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="FIA.html">FIA</a></li>
+        <li><a  href="FIA.html">FIA</a></li>
         <li><a href="teams.html">teams en coureurs</a></li>
-        <li><a class="active" href="geschiedenis.html">De geschiedenis</a></li>
-        <li><a href="autoonderdelen.html">De auto onderdelen</a></li>
+        <li><a  href="geschiedenis.html">De geschiedenis</a></li>
+        <li><a class="active" href="autoonderdelen.html">De auto onderdelen</a></li>
       </ul>
     </nav>
 
