--- a/teams.html
+++ b/teams.html
@@ -12,7 +12,7 @@
   <div class="page">
 
     <header>
-      <h1>teams en coureurs!</h1>
+      <h1>teams en coureurs</h1>
     </header>
 
     <nav>
