--- a/index.html
+++ b/index.html
@@ -27,7 +27,17 @@
 
     <main>
       <h2>home</h2>
+<img id="formule1logo" src="afbeeldingen/formule1logo.png" alt="formule 1">
+  
+  <p>Formule 1 is de hoogste klasse in de autosport in het algemeen en in de formuleracing in het bijzonder onder organisatie van de <a id="FIA" href="FIA.html">Fédération Internationale de l'Automobile</a>. De sport staat aan de technologische top van alle autosport. Formule 1-auto's bereiken (variërend per circuit) snelheden tot ruim boven de 300 km/h waarbij de turbomotor tot 15.000 toeren per minuut (tpm) begrensd is. De motoren kunnen nog hogere toerentallen bereiken, maar dit is niet toegestaan. In de auto's kan de zijwaartse versnelling in de bochten oplopen tot meer dan 5 g. De prestaties van de auto's zijn in sterke mate afhankelijk van elektronica (hoewel tractiecontrole en andere coureursondersteuning verboden zijn), aerodynamica, ophanging en banden.</p>
 
+<p>Het Formule 1-seizoen bestaat uit een serie races, een individuele race wordt "Grand Prix" genoemd. De race wordt verreden op gespecialiseerde circuits en in mindere mate ook op afgesloten stratencircuits. De resultaten van elke race worden gebruikt om ieder jaar twee wereldkampioenen te bepalen: een voor de coureurs en een voor de constructeurs. Zowel coureurs als constructeurs moeten in het bezit zijn van een superlicentie, de hoogste racelicentie die wordt uitgegeven door de FIA. Coureurs moeten aan een aantal voorwaarden voldoen om een superlicentie te krijgen. Zo moeten de coureurs onder andere minimaal 18 jaar oud zijn en 40 licentie punten hebben verdiend in andere raceklasses dan de Formule 1.</p>
+
+<p>Europa is het traditionele centrum van de Formule 1 waar (vrijwel) alle teams hun basis hebben en waar ongeveer de helft van alle races wordt gehouden. Het bereik van de Formule 1 is de afgelopen jaren sterk uitgebreid en grands prix worden over de hele wereld gehouden. Enkele races in Europa en Amerika zijn vervallen ten gunste van Azië en het Midden-Oosten. In 2009 werden negen van de achttien races buiten Europa gehouden.</p>
+
+<p>Formule 1 is een zeer groot televisie-evenement waarnaar door miljoenen mensen wordt gekeken. De Formula One Group, is de houder van de commerciële rechten. Als de duurste sport ter wereld kunnen de economische effecten significant zijn en worden interne politieke en financiële debatten vaak op de voet gevolgd door de media. Er kijken wereldwijd miljoenen mensen live naar de races, wat de constructeurs vervolgens hoge commerciële sponsorcontracten oplevert.</p>
+
+<p>In september 2016 nam Liberty Media een meerderheid van 18,7 procent van de aandelen in de Formula One Group in bezit; voor 7 miljard euro nam het eigendom over van private-equity-investeerder CVC Capital Partners dat sinds 2005 de meerderheid van de aandelen bezat. Ook Ecclestone verkocht zijn belang van 5,3 procent aan Liberty Media. De familiehoudstermaatschappij Bambino Trust verkoopt ook haar belang van 8,5 procent aan Liberty Media. Ecclestone blijft echter voorlopig voor nog drie jaar aan als directeur.</p>
       
 
     </main>
