--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
 
 <p>Het Formule 1-seizoen bestaat uit een serie races, een individuele race wordt "Grand Prix" genoemd. De race wordt verreden op gespecialiseerde circuits en in mindere mate ook op afgesloten stratencircuits. De resultaten van elke race worden gebruikt om ieder jaar twee wereldkampioenen te bepalen: een voor de coureurs en een voor de constructeurs. Zowel coureurs als constructeurs moeten in het bezit zijn van een superlicentie, de hoogste racelicentie die wordt uitgegeven door de FIA. Coureurs moeten aan een aantal voorwaarden voldoen om een superlicentie te krijgen. Zo moeten de coureurs onder andere minimaal 18 jaar oud zijn en 40 licentie punten hebben verdiend in andere raceklasses dan de Formule 1.</p>
 
-<p>Europa is het traditionele centrum van de Formule 1 waar (vrijwel) alle teams hun basis hebben en waar ongeveer de helft van alle races wordt gehouden. Het bereik van de Formule 1 is de afgelopen jaren sterk uitgebreid en grands prix worden over de hele wereld gehouden. Enkele races in Europa en Amerika zijn vervallen ten gunste van Azië en het Midden-Oosten. In 2009 werden negen van de achttien races buiten Europa gehouden.</p>
+
+<p>
+<img id="formule-startinggrid" src="afbeeldingen/startinggrid.jpg" alt="formule 1">Europa is het traditionele centrum van de Formule 1 waar (vrijwel) alle teams hun basis hebben en waar ongeveer de helft van alle races wordt gehouden. Het bereik van de Formule 1 is de afgelopen jaren sterk uitgebreid en grands prix worden over de hele wereld gehouden. Enkele races in Europa en Amerika zijn vervallen ten gunste van Azië en het Midden-Oosten. In 2009 werden negen van de achttien races buiten Europa gehouden.</p>
 
 <p>Formule 1 is een zeer groot televisie-evenement waarnaar door miljoenen mensen wordt gekeken. De Formula One Group, is de houder van de commerciële rechten. Als de duurste sport ter wereld kunnen de economische effecten significant zijn en worden interne politieke en financiële debatten vaak op de voet gevolgd door de media. Er kijken wereldwijd miljoenen mensen live naar de races, wat de constructeurs vervolgens hoge commerciële sponsorcontracten oplevert.</p>
 
