--- a/FIA.html
+++ b/FIA.html
@@ -26,7 +26,50 @@
     </nav>
 
     <main>
+
+      <h3 class="onderwerpen">wat is de FIA?</h3>
       
+      <p>De organisatie werd opgericht in 1904 en het hoofdkantoor is gevestigd in Parijs, Frankrijk. Sindsdien is de FIA uitgegroeid tot een soort toezichthouder op ontzettend veel prominente raceklassen. Vandaag de dag zijn zeven van deze klassen een officieel wereldkampioenschap. Andere bekende raceklassen onder de FIA zijn bijvoorbeeld de Formule 2, Formule 3 en Formule E. Op het moment van schrijven is Mohammed bin Sulayem president van de FIA. Hij nam in 2021 het stokje over van Jean Todt. De organisatie werd opgericht in 1904 en het hoofdkantoor is gevestigd in Parijs, Frankrijk. Sindsdien is de FIA uitgegroeid tot een soort toezichthouder op ontzettend veel prominente raceklassen. Vandaag de dag zijn zeven van deze klassen een officieel wereldkampioenschap. Andere bekende raceklassen onder de FIA zijn bijvoorbeeld de Formule 2, Formule 3 en Formule E. Op het moment van schrijven is Mohammed bin Sulayem president van de FIA. Hij nam in 2021 het stokje over van Jean Todt.</p>
+
+      <h3 class="onderwerpen">Wat doet de FIA precies?</h3>
+
+      <p>Maar wat doet de FIA precies? Kort door de bocht zien ze erop toe dat de verschillende competities goed verlopen. Daarnaast runnen ze de evenementen, schrijven ze de reglementen en bepalen ze de straffen voor degenen die zich niet aan die reglementen houden. Dat is ook meteen waarom de FIA zo vaak ter discussie staat binnen de Formule 1. Coureurs en teams zijn het namelijk regelmatig niet eens met de beslissingen van de FIA, net als dat voetballers maar zelden vinden dat de scheidsrechter gelijk heeft. De aspecten binnen racecompetities waar de FIA verantwoordelijk voor is, zijn er haast te veel om op te noemen. Daarom zetten we de meest belangrijke op een rijtje.<br><br>
+
+<span class="onderwerp2">Veiligheid</span><br>
+De FIA bepaalt de veiligheidsvoorschriften waar de deelnemende coureurs aan moeten voldoen. Denk hierbij bijvoorbeeld aan de brandvrije racepakken en de voorschriften waar de helmen aan moeten voldoen, maar ook de beveiligingssystemen in de auto. Deze worden constant doorontwikkelt als blijkt dat dit nodig is. Zo werd in 2018 de halo geïntroduceerd en gaat volgend seizoen de rolbeugel op de schop naar aanleiding van de crash van Zhou Guanyu in Groot-Brittannië.<br><br>
+
+<span class="onderwerp2">Straffen uitdelen</span><br>
+Wie tijdens een raceweekend de reglementen overtreedt, moet bij de stewards op het matje komen. De teams kunnen (tegen betaling) tegen de uitspraak van de stewards in beroep gaan, maar uiteindelijk heeft de FIA altijd het laatste woord.<br><br>
+
+<span class="onderwerp2">Regels en richtlijnen</span><br>
+Zoals al gezegd schrijft de FIA de reglementen voor de verschillende racecompetities. Ze bepalen ook de voorschriften waar bijvoorbeeld de circuits, auto's en coureurs aan moeten voldoen. Zo hebben rijders een superlicentie nodig voordat ze in een Formule 1-auto mogen stappen, en moeten circuits eerst een bepaalde licentie ontvangen, afhankelijk van de raceklasse die ze hopen te ontvangen. Binnen de Formule 1 wordt er alleen gereden circuits met een Grade 1-licenctie, de hoogst haalbare licentie.<br><br>
+
+<span class="onderwerp2">Brandjes blussen</span><br>
+Daarnaast fungeert de FIA ook als een soort mediator tussen de verschillende teams. Als de spanningen hoog oplopen, bijvoorbeeld zoals tussen Red Bull Racing en Mercedes afgelopen jaar, gaat de organisatie met deze teams om tafel om te kijken of er een oplossing gevonden kan worden. Daarnaast worden incidenten en crashes en dergelijke uitvoerig besproken met de coureurs, om te kijken hoe dit in de toekomst kan worden voorkomen.<br><br>
+
+<span class="onderwerp2">Prijzengeld</span><br>
+En dan natuurlijk het prijzengeld. De FIA is ook verantwoordelijk voor het uitdelen van de juiste hoeveelheden geld aan de teams. Dit gaat in vrijwel alle competities op basis van de klassering in het constructeurskampioenschap. Daarnaast is het in verschillende raceklassen zo, ook in de Formule 1, dat er ieder raceweekend een vergoeding is voor de teams die WK-punten hebben gescoord. Denk hierbij aan reiskosten en dergelijken.</p>
+
+<h3 class="onderwerpen">Structuur van de FIA</h3>
+
+<p>De structuur van de FIA is enorm complex. Zoals al gezegd bestaat het uit ruim 240 verschillende organisaties wereldwijd. Samen vormen zij de General Assembly. Deze groep komt jaarlijks bijeen, maar kan onder bijzondere omstandigheden ook vaker een vergadering inlassen. De agendapunten die hier worden besproken, worden met name aangevoerd door de twee zogeheten wereldraden: World Motor Sport Council en World Council for Automobile Mobility and Tourism. Met name die eerste hoor je binnen de Formule 1 regelmatig voorbij komen als er grote beslissingen zijn genomen.<br><br>
+
+Dit alles valt onder het bewind van de FIA-president. Op dit moment is dat Mohammed bin Sulayem, een 60-jarige voormalig Rally-coureur uit Dubai. De FIA is een non profit-organisatie en houdt zich dus ook niet bezig met de commerciële kant van de verschillende competities. Dit wordt gedaan door andere organisaties. Binnen de Formule 1 is dit de Formula One Group, beter bekend als de FOM.</p>
+
+      <h3 class="onderwerpen">Wie delen de straffen uit binnen de Formule 1</h3>
+
+<p><span class="onderwerp2">Wedstrijdleider</span><br>
+Als we het even specifiek toespitsen op de Formule 1, is de wedstrijdleider de hoogste afgevaardigde vanuit de FIA. Dit was tot begin dit jaar Michael Masi, maar na zijn gedwongen vertrek heeft men er voor gekozen twee nieuwe wedstrijdleiders aan te stellen: Niels Wittich en Eduaro Freitas. Zij wisselen elkaar af tijdens het seizoen.<br><br>
+
+Een wedstrijdleider houdt alles nauwkeurig in de gaten en geeft opdrachten aan zijn ondersteunende teams. Hij zorgt er voor dat alle sessies op tijd beginnen, kan eventueel de starttijden uitstellen vanwege bijvoorbeeld zware regenval en bepaalt wanneer de Safety Car de baan moet opkomen of wanneer de rode vlag moet worden gezwaaid.<br><br>
+
+<span class="onderwerp2">Race-officials</span><br>
+Vervolgens heb je de race-officials. Deze worden voorafgaand aan ieder raceweekend aangewezen om de naleving van de regels te beoordelen en er voor te zorgen dat iedereen op en naast de baan veilig blijft als er wordt geracet. Een aantal van deze officials zijn permanent, waaronder de wedstrijdleider. Zij bekleden deze functie ieder raceweekend. Als zij iets zien dat niet helemaal lijkt te kloppen, kunnen ze het neerleggen bij de stewards.<br><br>
+
+<span class="onderwerp2">Stewards</span><br>
+Voorafgaand aan ieder raceweekend wordt er een panel van vijf stewards aangewezen. Drie hiervan worden aangewezen door de FIA. Daarnaast moet één steward altijd een voormalig coureur zijn om het perspectief van de rijders mee te nemen. De vijfde steward wordt aangewezen door de nationale sportbond en moet kennis van het circuit hebben. Deze stewards beoordelen vermeende overtredingen op de baan en delen eventuele straffen uit.</p>
+   
+    
     </main>
 
     <footer>
