alsjeblieft doe dit opslaan

--- a/geschiedenis.html
+++ b/geschiedenis.html
@@ -21,11 +21,36 @@
         <li><a href="FIA.html">FIA</a></li>
         <li><a href="teams.html">teams en coureurs</a></li>
         <li><a class="active" href="geschiedenis.html">De geschiedenis</a></li>
-        <li><a href="autoonderdelen.html">De auto onderdelen</a></li>
+        <li><a href="Weetjes.html">Weetjes over F1</a></li>
       </ul>
     </nav>
 
     <main>
+      <h2 class="onderwerpen">De geschiedenis van formule 1 sport!</h2>
+
+      <p>Engeland wordt vaak de bakermat van de autosport in Europa genoemd. Het was dan ook in Engeland waar de allereerste Formule 1 race, voor het nieuwe wereldkampioenschap Formule 1 verreden werd. Dit alles gebeurde op 13 mei van het jaar 1950. Het allereerste wereldkampioenschap is een prooi voor het team van het Italiaanse Alfa Romeo. Tot het jaar 1958 overheersen twee Italiaanse coureurs in de Formule 1. Ze winnen samen de eerste 7 wereldkampioenschappen. In 1958 wordt de Italiaanse overwinningsreeks doorbroken. De Brit Hawthorn wint het wereldkampioenschap. Dit jaar heeft tevens een groot dieptepunt voor de Formule 1 met zich meegebracht. In 1958 verongelukt voor het eerst in een wereldkampioenschap een coureur. De Formule 1 wordt in de jaren vijftig nog echt gezien als een spelletje. Iedereen is bevriend met elkaar en echte vijandigheid bestaat in deze tijd niet in de autosport. Er gaat echter wel veel geld om in de autosport in de jaren vijftig. De racewagens van de jaren vijftig hebben geen vleugels/spoilers en lijken op grote sigaren. Afgezien van een enkele olie of benzinesticker hebben de wagens geen reclame. De wagens komen in hun ‘nationale racekleur’ aan de start.</p>
+
+      <h3 class="onderwerpen">De zestiger jaren: de eerste aerodynamische veranderingen…</h3>
+
+      <p>Aan het einde van de jaren vijftig voert het Britse Cooper-team grote veranderingen door in de stroomlijn van haar wagens. In 1959 verschijnt dit team met de eerste Formule 1 wagen, met de motor achterin, aan de start. Deze wagen is veel kleiner, en daarom ook lichter, dan de overige formule 1 wagens. De eerste twee hierop volgende wereldtitels worden allebei veroverd met deze revolutionaire wagen. Het Italiaanse Ferrari bouwt voor 1961 de F156 oftewel de ‘Sharknose’. De nieuwe stroomlijn van de Ferrari is zeer bijzonder voor die tijd. Deze wagen weet Ferrari dat jaar dan ook soeverein naar de titel te loodsen. Ondertussen worden de wagens meer en meer zo ontworpen dat ze steeds lager bij het asfalt komen te liggen. Je kunt wel begrijpen dat deze ontwikkeling veel gevaar met zich meebrengt. De eerste ontwerper die wat doet aan de stevigheid en dus ook aan de veiligheid van de wagen is teambaas Colin Chapman. Hij ontwerpt het zogenaamde monocoque chassis. In plaats van een buizenframe dat in deze tijd gebruikelijk is, zit de coureur nu in een soort stalen doos. Chapman heeft wisselend succes met zijn wagens. Hij word in vijf jaar tijd twee maal wereldkampioen met zijn nieuwe ontwerp. Het is diezelfde Colin Chapman die in 1968 opeens vleugels laat verschijnen op zijn wagens. Deze vrij hoog en vaak losjes gemonteerde vleugels zorgen voor vele ongelukken in de autosport. Toch zorgen dezelfde vleugels voor een revolutie in de autosport. Vleugels zullen vanaf dit moment niet meer verdwijnen uit de formule 1.</p>
+
+      <h3 class="onderwerpen">De zeventiger jaren: gevaarlijk,  gevaarlijker, gevaarlijkst!</h3>
+
+      <p>Door de aerodynamische ontwikkelingen worden de formule 1 wagens steeds sneller en daardoor helaas ook onveiliger. In tien jaar tijd verongelukken er maar liefst negen coureurs tijdens Formule 1 races. Verder start in de jaren 70 de ontwikkeling van de onderkant van de wagen. Wagenontwerpers beginnen meer en meer met het gebruik van vleugels aan de achterkant van de bolide om downforce te genereren op de achterwielen. Voor nog meer downforce te produceren worden er totaal nieuwe onderkanten voor de verschillende wagens gemaakt.</p>
+
+      <h3 class="onderwerpen">De tachtiger jaren: nog een beetje sneller…</h3>
+
+      <p>Na de vele ongelukken in de jaren zeventig wordt het aspect veiligheid steeds belangrijker binnen de formule 1, maar de wagens blijven maar sneller gaan. Dit komt onder andere door de succesvolle introductie van de turbomotor door Renault. Uiteindelijk wordt in 1983 de eerste coureur met een turbomotor wereldkampioen. In 1989 word deze zelfde turbomotor voor het eerst verboden binnen de Formule 1 wereld. Hiermee wordt een poging gedaan de enorme snelheden wat te drukken. Op het gebied van materiaal zijn de jaren ’80 erg belangrijk. Sinds de jaren ’80 zijn koolstofvezels een veelgebruikt materiaal in de formule 1. Dat komt omdat het tegelijk een licht en sterk materiaal is, en gemakkelijk in de gewenste vorm geproduceerd kan worden. Tegenwoordig bestaat ongeveer 75% van de formule 1 wagens uit koolstofvezelmaterialen.</p>
+
+      <h3 class="onderwerpen">De negentiger jaren: word veiligheid dan toch belangrijk?…</h3>
+
+      <p>Vanaf de jaren negentig ontstaat er binnen de Formule 1 een hevige strijd om wie de krachtigste motor heeft. Aan aerodynamische ontwikkelingen wordt nauwelijks gedacht in deze tijd. Een van de weinige ontwikkelingen op dit gebied is het gebruik van vele kleine vleugels op vele verschillende plaatsen van de wagen. Hierdoor ondervindt de wagen minder luchtweerstand en gaan wagen weer sneller en sneller. Verschillende teams worden wereldkampioen. Na vier jaar zonder dodelijke ongevallen binnen de autosport wordt de Formule 1 wakkergeschut als twee coureurs in 1994 in het zelfde weekend verongelukken. Vanaf dit moment beginnen alle teams binnen de Formule 1 meer aandacht te besteden aan veiligheid. De Formule 1 wagen maakt vanaf 1994 vele ontwikkelingen door. De wagen moet veilig, maar ook uiterst snel zijn. Steeds meer beginnen de Formule 1 teams te beseffen hoe belangrijk aerodynamica binnen de autosport is.</p>
+
+      <h3 class="onderwerpen">De ontwikkelingen zetten zich voort…</h3>
+
+      <p>De eerste jaren van de nieuwe eeuw ondergaat de Formule 1 wagen telkens kleine mutaties. Meer en meer beginnen teams tests te doen op het gebied van aerodynamica. Dit doen de teams d.m.v. het gebruik van windtunnels. Vele miljoenen gaan er per jaar op in onderzoek naar de ideale Formule 1 wagen. In de hedendaagse Formule 1 is een windtunnel onmisbaar. De topteams in de Formule 1 beschikken allen over een “state of the art” windtunnel waarin in ploegendiensten 24 uur per dag wordt gewerkt. De windtunnels binnen de Formule 1 kunnen schaalmodellen testen met een windsnelheid van boven de 290 kilometer per uur.
+</p>
+
       
     </main>
 
