--- a/teams.html
+++ b/teams.html
@@ -21,7 +21,7 @@
         <li><a href="FIA.html">FIA</a></li>
         <li><a class="active" href="teams.html">teams en coureurs</a></li>
         <li><a href="geschiedenis.html">De geschiedenis</a></li>
-        <li><a href="autoonderdelen.html">De auto onderdelen</a></li>
+        <li><a href="Weetjes.html">Weetjes over F1</a></li>
       
       </ul>
     </nav>
