--- a/teams.html
+++ b/teams.html
@@ -86,37 +86,208 @@
           <strong>Aantal polepositions:</strong> 136
         </p>
 
-        <img id="mercedezimage1" src="afbeeldingen/mercedes-f1-logo-1.jpg" alt="redbullimage1">
+        <img id="mercedezimage1" src="afbeeldingen/mercedes-f1-logo-1.jpg" alt="mercedez image">
 
         <h4 id="Lewis">Lewis Hamilton</h4>
 
         <p id="Mercedez3">
           <strong>team:</strong> Mercedes-AMG F1 Team<br>
-          <strong>land:</strong> Nederland<br>
-          <strong>Aantal F1-races:</strong> 136<br>
-          <strong>Aantal podia:</strong> 77<br>
-          <strong>punten:</strong> 2011.5<br>
-          <strong>Wereld Kampioen:</strong> 2<br>
-          <strong>Aantal polepositions:</strong> 36<br>
-          <strong>Geboortedatum:</strong> 30/09/1997
+          <strong>land:</strong> Verenigd Koningkrijk<br>
+          <strong>Aantal F1-races:</strong> 310<br>
+          <strong>Aantal podia:</strong> 191<br>
+          <strong>punten:</strong> 4405.5<br>
+          <strong>Wereld Kampioen:</strong> 7<br>
+          <strong>Aantal polepositions:</strong> 103<br>
+          <strong>Geboortedatum:</strong> 07/01/1985 
         </p>
 
         <h4 id="Rusell">George Russell</h4>
 
         <p id="mercedez4">
           <strong>team:</strong> Mercedes-AMG F1 Team<br>
-          <strong>land:</strong> Mexico<br>
-          <strong>Aantal F1-races:</strong> 236<br>
-          <strong>Aantal podia:</strong> 26<br>
-          <strong>punten:</strong> 1201<br>
+          <strong>land:</strong> Verenigd Koninkrijk<br>
+          <strong>Aantal F1-races:</strong> 82<br>
+          <strong>Aantal podia:</strong> 9<br>
+          <strong>punten:</strong> 294<br>
           <strong>Wereld Kampioen:</strong> 0<br>
-          <strong>Aantal polepositions:</strong> 4<br>
-          <strong>Geboortedatum:</strong> 26/01/1990
+          <strong>Aantal polepositions:</strong> 1<br>
+          <strong>Geboortedatum:</strong> 15/02/1998
+        </p>
+      </div>
+
+      <div id="ferrari">
+        <h3 class="ferrari-team">Scuderia Ferrari</h3>
+
+        <p id="ferrari1">Scuderia Ferrari is de racedivisie van de Italiaanse autofabrikant Ferrari en het raceteam dat deelneemt aan Formule 1-races. Het team heeft de bijnaam "Het steigerende paard", verwijzend naar het logo.</p>
+
+        <p id="ferrari2"><strong>Opgericht:</strong> 1929, Italië<br>
+          <strong>Oprichter:</strong> Enzo Ferrari<br>
+          <strong>CTO:</strong> Enrico Cardile, Enrico Gualtier<br>
+          <strong>Aantal F1-races:</strong> 1054 (1050 starts)<br>
+          <strong>Aantal podia:</strong> 792<br>
+          <strong>Aantal polepositions:</strong> 241
+        </p>
+
+        <img id="ferrari-image1" src="afbeeldingen/ferrari-logo-illustration-958x575.jpg" alt="ferrari image">
+
+        <h4 id="charles">Charles Leclerc</h4>
+
+        <p id="ferrari3">
+          <strong>team:</strong> Scuderia Ferrari<br>
+          <strong>land:</strong> Monaco<br>
+          <strong>Aantal F1-races:</strong> 103<br>
+          <strong>Aantal podia:</strong> 24<br>
+          <strong>punten:</strong> 868<br>
+          <strong>Wereld Kampioen:</strong> 0<br>
+          <strong>Aantal polepositions:</strong> 5<br>
+          <strong>Geboortedatum:</strong> 16/10/1997 
+        </p>
+
+        <h4 id="carlos">Carlos Sainz</h4>
+
+        <p id="ferrari4">
+          <strong>team:</strong> Scuderia Ferrari<br>
+          <strong>land:</strong> Spanje<br>
+          <strong>Aantal F1-races:</strong> 163<br>
+          <strong>Aantal podia:</strong> 15<br>
+          <strong>punten:</strong> 782.5<br>
+          <strong>Wereld Kampioen:</strong> 0<br>
+          <strong>Aantal polepositions:</strong> 1<br>
+          <strong>Geboortedatum:</strong> 01/09/1994
         </p>
       </div>
 
 
+      <div id="mclaren">
+        <h3 class="mclaren-team">McLaren</h3>
 
+        <p id="mclaren1">McLaren is een raceteam in de Formule 1. Het is onderdeel van McLaren Racing, dat op zijn beurt onder de McLaren Technology Group valt. McLaren werd opgericht in 1963 en reed zijn eerste Grand Prix in 1966. Het is daarmee een van de oudste teams in de Formule 1.</p>
+
+        <p id="mclaren2"><strong>Opgericht:</strong> 1963, Verenigd Koninkrijk<br>
+          <strong>Oprichter:</strong> Bruce McLaren<br>
+          <strong>CTO:</strong> James Key<br>
+          <strong>Aantal F1-races:</strong>  928 (924 starts)<br>
+          <strong>Aantal podia:</strong> 508<br>
+          <strong>Aantal polepositions:</strong> 156
+        </p>
+
+        <img id="mclarenimage1" src="afbeeldingen/mclaren-f1-team-logo-1.jpg" alt="mclaren image">
+
+        <h4 id="norris">Lando Norris</h4>
+
+        <p id="Mclaren3">
+          <strong>team:</strong> McLaren<br>
+          <strong>land:</strong> Verenigd Koningkrijk<br>
+          <strong>Aantal F1-races:</strong> 82<br>
+          <strong>Aantal podia:</strong> 6<br>
+          <strong>punten:</strong> 428<br>
+          <strong>Wereld Kampioen:</strong> 0<br>
+          <strong>Aantal polepositions:</strong> 1<br>
+          <strong>Geboortedatum:</strong> 13/11/1999 
+        </p>
+
+        <h4 id="riciardo">Daniël Riciardo</h4>
+
+        <p id="mclaren4">
+          <strong>team:</strong> Mercedes-AMG F1 Team<br>
+          <strong>land:</strong> Australië<br>
+          <strong>Aantal F1-races:</strong> 232<br>
+          <strong>Aantal podia:</strong> 23<br>
+          <strong>punten:</strong> 1311<br>
+          <strong>Wereld Kampioen:</strong> 0<br>
+          <strong>Aantal polepositions:</strong> 8<br>
+          <strong>Geboortedatum:</strong> 1/7/1989
+        </p>
+      </div>
+
+
+            <div id="alpine-f1">
+        <h3 class="alpine">Alpine F1 Team</h3>
+
+        <p id="alpine1">Alpine F1 Team, voorheen genaamd Renault F1 Team, is een Frans autosportteam actief in de Formule 1.Vanaf het seizoen 2021 wordt de teamnaam vanwege commerciële redenen veranderd van "Renault F1 Team" in "Alpine F1 Team".</p>
+
+        <p id="alpine2"><strong>Opgericht:</strong> 1977, Frankrijk<br>
+          <strong>Oprichter:</strong> Louis Renault<br>
+          <strong>CTO:</strong> 	Pat Fry, Remi Taffin<br>
+          <strong>Aantal F1-races:</strong> 447 (444 starts)<br>
+          <strong>Aantal podia:</strong> 105<br>
+          <strong>Aantal polepositions:</strong> 51
+        </p>
+
+        <img id="alpine-image1" src="afbeeldingen/alpine.jpg" alt="alpine image">
+
+        <h4 id="alonso">Fernando Alonso</h4>
+
+        <p id="alpine3">
+          <strong>team:</strong> Alpine F1 Team<br>
+          <strong>land:</strong> Spain<br>
+          <strong>Aantal F1-races:</strong> 358<br>
+          <strong>Aantal podia:</strong> 98<br>
+          <strong>punten:</strong> 2061<br>
+          <strong>Wereld Kampioen:</strong> 2<br>
+          <strong>Aantal polepositions:</strong> 32<br>
+          <strong>Geboortedatum:</strong> 07/01/1985 
+        </p>
+
+        <h4 id="ocon">Esteban Ocon</h4>
+
+        <p id="alpine4">
+          <strong>team:</strong> Alpine F1 Team<br>
+          <strong>land:</strong> Frankrijk<br>
+          <strong>Aantal F1-races:</strong> 111<br>
+          <strong>Aantal podia:</strong> 2<br>
+          <strong>punten:</strong> 364<br>
+          <strong>Wereld Kampioen:</strong> 0<br>
+          <strong>Aantal polepositions:</strong> 1<br>
+          <strong>Geboortedatum:</strong> 17/09/1996
+        </p>
+      </div>
+
+
+      <div id="aston-f1">
+        <h3 class="aston">Aston Martin</h3>
+
+        <p id="aston1">Aston Martin F1 Team is een Brits Formule 1-team dat in 1959 en 1960 als constructeur deelnam aan de Formule 1. Het team staat ingeschreven als Aston Martin Aramco Cognizant F1 Team om deel te nemen aan het Formule 1-seizoen van 2022.</p>
+
+        <p id="aston2"><strong>Opgericht:</strong> 2010, Verenigd Koninkrijk<br>
+          <strong>Oprichter:</strong> Ross Brawn, Norbert Haug<br>
+          <strong>CTO:</strong> James Allison<br>
+          <strong>Aantal F1-races:</strong> 271 (271 starts)<br>
+          <strong>Aantal podia:</strong> 280<br>
+          <strong>Aantal polepositions:</strong> 136
+        </p>
+
+        <img id="astonimage1" src="afbeeldingen/Aston_Martin_Aramco_Cognizant_F1_Team.jpg" alt="Aston Martin image">
+
+        <h4 id="vettel">Lewis Hamilton</h4>
+
+        <p id="aston3">
+          <strong>team:</strong> Mercedes-AMG F1 Team<br>
+          <strong>land:</strong> Verenigd Koningkrijk<br>
+          <strong>Aantal F1-races:</strong> 310<br>
+          <strong>Aantal podia:</strong> 191<br>
+          <strong>punten:</strong> 4405.5<br>
+          <strong>Wereld Kampioen:</strong> 7<br>
+          <strong>Aantal polepositions:</strong> 103<br>
+          <strong>Geboortedatum:</strong> 07/01/1985 
+        </p>
+
+        <h4 id="stroll">George Russell</h4>
+
+        <p id="aston4">
+          <strong>team:</strong> Mercedes-AMG F1 Team<br>
+          <strong>land:</strong> Verenigd Koninkrijk<br>
+          <strong>Aantal F1-races:</strong> 82<br>
+          <strong>Aantal podia:</strong> 9<br>
+          <strong>punten:</strong> 294<br>
+          <strong>Wereld Kampioen:</strong> 0<br>
+          <strong>Aantal polepositions:</strong> 1<br>
+          <strong>Geboortedatum:</strong> 15/02/1998
+        </p>
+      </div>
+
+
+      
     </main>
 
     <footer>
