--- a/teams.html
+++ b/teams.html
@@ -249,44 +249,126 @@
 
         <p id="aston1">Aston Martin F1 Team is een Brits Formule 1-team dat in 1959 en 1960 als constructeur deelnam aan de Formule 1. Het team staat ingeschreven als Aston Martin Aramco Cognizant F1 Team om deel te nemen aan het Formule 1-seizoen van 2022.</p>
 
-        <p id="aston2"><strong>Opgericht:</strong> 2010, Verenigd Koninkrijk<br>
-          <strong>Oprichter:</strong> Ross Brawn, Norbert Haug<br>
-          <strong>CTO:</strong> James Allison<br>
-          <strong>Aantal F1-races:</strong> 271 (271 starts)<br>
-          <strong>Aantal podia:</strong> 280<br>
-          <strong>Aantal polepositions:</strong> 136
+         <p id="aston2"><strong>Opgericht:</strong> 1959, Verenigd Koninkrijk<br>
+          <strong>Oprichter:</strong> Lawrence Stroll (2021)<br>
+          <strong>CTO:</strong> Andrew Green<br>
+          <strong>Aantal F1-races:</strong> 50 (49 starts)<br>
+          <strong>Aantal podia:</strong> 1<br>
+          <strong>Aantal polepositions:</strong> 0
         </p>
 
         <img id="astonimage1" src="afbeeldingen/Aston_Martin_Aramco_Cognizant_F1_Team.jpg" alt="Aston Martin image">
 
-        <h4 id="vettel">Lewis Hamilton</h4>
+        <h4 id="vettel">Sebastian Vettel</h4>
 
         <p id="aston3">
-          <strong>team:</strong> Mercedes-AMG F1 Team<br>
-          <strong>land:</strong> Verenigd Koningkrijk<br>
-          <strong>Aantal F1-races:</strong> 310<br>
-          <strong>Aantal podia:</strong> 191<br>
-          <strong>punten:</strong> 4405.5<br>
-          <strong>Wereld Kampioen:</strong> 7<br>
-          <strong>Aantal polepositions:</strong> 103<br>
-          <strong>Geboortedatum:</strong> 07/01/1985 
+          <strong>team:</strong> Aston martin<br>
+          <strong>land:</strong> Duitsland<br>
+          <strong>Aantal F1-races:</strong> 300<br>
+          <strong>Aantal podia:</strong> 122<br>
+          <strong>punten:</strong> 3098<br>
+          <strong>Wereld Kampioen:</strong> 4<br>
+          <strong>Aantal polepositions:</strong> 57<br>
+          <strong>Geboortedatum:</strong> 03/07/1987 
         </p>
 
-        <h4 id="stroll">George Russell</h4>
+        <h4 id="stroll">Lance Stroll</h4>
 
         <p id="aston4">
-          <strong>team:</strong> Mercedes-AMG F1 Team<br>
-          <strong>land:</strong> Verenigd Koninkrijk<br>
-          <strong>Aantal F1-races:</strong> 82<br>
-          <strong>Aantal podia:</strong> 9<br>
-          <strong>punten:</strong> 294<br>
+          <strong>team:</strong> Aston Martin<br>
+          <strong>land:</strong> Canada<br>
+          <strong>Aantal F1-races:</strong> 122<br>
+          <strong>Aantal podia:</strong> 3<br>
+          <strong>punten:</strong> 194<br>
           <strong>Wereld Kampioen:</strong> 0<br>
           <strong>Aantal polepositions:</strong> 1<br>
-          <strong>Geboortedatum:</strong> 15/02/1998
+          <strong>Geboortedatum:</strong> 29/10/1998
         </p>
       </div>
 
+        <div id="romeo-f1">
+        <h3 class="romeo">Alfa Romeo Racing</h3>
 
+        <p id="romeo1">Alfa Romeo F1 Team is een Zwitsers Formule 1-team. Tot 1988 bleef het hierin ook motoren leveren. Alfa Romeo was een van de constructeurs die deelnamen aan het inaugurele seizoen van de Formule 1, dat door een van hun rijders, Nino Farina, dat jaar werd gewonnen.</p>
+
+         <p id="romeo2"><strong>Opgericht:</strong> 1970, Switzerland<br>
+          <strong>Oprichter:</strong> Alexandre Romeo<br>
+          <strong>CTO:</strong> Jan Monchaux<br>
+          <strong>Aantal F1-races:</strong> 192 (192 starts)<br>
+          <strong>Aantal podia:</strong> 26<br>
+          <strong>Aantal polepositions:</strong> 12
+        </p>
+
+        <img id="romeo-image1" src="afbeeldingen/romeo.jpg" alt="Alpha Romeo image">
+
+        <h4 id="bottas">Valtteri Bottas</h4>
+
+        <p id="romeo3">
+          <strong>team:</strong> Alfa Romeo Racing<br>
+          <strong>land:</strong> Finland<br>
+          <strong>Aantal F1-races:</strong> 200<br>
+          <strong>Aantal podia:</strong> 67<br>
+          <strong>punten:</strong> 1787<br>
+          <strong>Wereld Kampioen:</strong> 0<br>
+          <strong>Aantal polepositions:</strong> 10<br>
+          <strong>Geboortedatum:</strong> 28/08/1989 
+        </p>
+
+        <h4 id="zhou">Zhou Guanyu</h4>
+
+        <p id="romeo4">
+          <strong>team:</strong> Alfa Romeo Racing<br>
+          <strong>land:</strong> China<br>
+          <strong>Aantal F1-races:</strong> 122<br>
+          <strong>Aantal podia:</strong> 0<br>
+          <strong>punten:</strong> 6<br>
+          <strong>Wereld Kampioen:</strong> 0<br>
+          <strong>Aantal polepositions:</strong> 0<br>
+          <strong>Geboortedatum:</strong> 30/05/1999
+        </p>
+      </div>
+
+ <div id="tauri-f1">
+        <h3 class="tauri">Scuderia AlphaTauri</h3>
+
+        <p id="tauri1">Scuderia AlphaTauri, voorheen Scuderia Toro Rosso, is een Italiaans Formule 1-team dat actief is sinds 2006. Het team komt oorspronkelijk voort uit het Formule 1-team van Minardi. Dit is het gevolg van een overname door Red Bull, dat zo een tweede team op de startgrid kreeg naast Red Bull Racing.</p>
+
+         <p id="tauri2"><strong>Opgericht:</strong> 2020, Italië<br>
+          <strong>Oprichter:</strong>  Dietrich Mateschitz<br>
+          <strong>CTO:</strong> Jody Egginton<br>
+          <strong>Aantal F1-races:</strong> 329 (329 starts)<br>
+          <strong>Aantal podia:</strong> 5<br>
+          <strong>Aantal polepositions:</strong> 1
+        </p>
+
+        <img id="tauri-image1" src="afbeeldingen/Scuderia_Alpha_Tauri_Logo_2020.webp" alt="AlphaTauri image">
+
+        <h4 id="gasly">Pierre Gasly</h4>
+
+        <p id="tauri3">
+          <strong>team:</strong> Scuderia AlphaTauri<br>
+          <strong>land:</strong> Frankrijk<br>
+          <strong>Aantal F1-races:</strong> 108<br>
+          <strong>Aantal podia:</strong> 3<br>
+          <strong>punten:</strong> 332<br>
+          <strong>Wereld Kampioen:</strong> 0<br>
+          <strong>Aantal polepositions:</strong> 1<br>
+          <strong>Geboortedatum:</strong> 07/2/1996 
+        </p>
+
+        <h4 id="tsunoda">Yuki Tsunoda</h4>
+
+        <p id="tauri4">
+          <strong>team:</strong> Scuderia AlphaTauri<br>
+          <strong>land:</strong> Japan<br>
+          <strong>Aantal F1-races:</strong> 44<br>
+          <strong>Aantal podia:</strong> 0<br>
+          <strong>punten:</strong> 44<br>
+          <strong>Wereld Kampioen:</strong> 0<br>
+          <strong>Aantal polepositions:</strong> 0<br>
+          <strong>Geboortedatum:</strong> 11/05/2000
+        </p>
+      </div>
       
     </main>
 
